# ML-infra

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  gpu.yml
examples/: benchmark.py  cuda_compile_demo.py  kernel_bench.py  numba_compile_demo.py  rag_demo.py  run_server.py
src/mlinfra/: __init__.py
src/mlinfra/cuda/: __init__.py  bench.py  compile.py  numba_kernels.py  runtime.py  triton_kernels.py
src/mlinfra/cuda/kernels/: fused_softmax.cu  saxpy.cu  tiled_gemm.cu
src/mlinfra/orchestration/: __init__.py  client.py  loaders.py  pipeline.py  retriever.py  vectorstore.py
src/mlinfra/serving/: __init__.py  backends.py  engine.py  schemas.py  server.py
src/mlinfra/tracking/: __init__.py  metrics.py  scheduler.py  tracker.py
tests/: test_cuda.py  test_orchestration.py  test_serving.py  test_tracking.py
